--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,4 +1,4 @@
-name: Freenance_v2_Automated_tests
+name: Regression_tests
 
 on:
   workflow_dispatch:
@@ -27,17 +27,17 @@ jobs:
           path: ./.github/gh-pages
 
       - name: Set test command
+        id: set-test-command
         run: |
           case "${{ github.event.inputs.deployment_target }}" in
             tests_start_page)
-              echo "TEST_COMMAND=pytest -sv tests/test_start_page --alluredir=allure-results";;
-            
+              echo "TEST_COMMAND=pytest -sv tests/test_start_page --alluredir=allure-results" >> $GITHUB_ENV;;
             all)
               echo "TEST_COMMAND=pytest -sv tests/ --alluredir=allure-results" >> $GITHUB_ENV;;
+          esac
 
       - name: Run Tests using docker-compose
-        run: |
-          docker-compose up --exit-code-from regression || true
+        run: docker-compose up --exit-code-from regression || true
 
       - name: Copy history from gh-pages to allure-results
         run: |
@@ -45,12 +45,10 @@ jobs:
           sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
-        run: |
-          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+        run: sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
       - name: Update Allure history
-        run: |
-          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
+        run: sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
