--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -46,9 +46,9 @@ jobs:
         run: |
           sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-#      - name: Update Allure history
-#        run: |
-#          sudo cp -R allure-report/history/* ./.github/gh-pages/history/ || true
+      - name: Update Allure history
+        run: |
+          sudo cp -R allure-report/history/* ./.github/gh-pages/history/ || true
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
